[FIX] UI Cleanup: fix alignment of 'Export to CSV' button

--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -1237,6 +1237,9 @@
       }
     }
 
+    .csvButton {
+      padding-right: 0px;
+    }
   }
 }
 
